# win-rio-client

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  win-rio-client.code-workspace
.cmake/: version-vars-windows.cmake
.github/scripts/: getFullDateTime.bat
.github/workflows/: build.yml  release.yml
RIOIOCPUDP/: CMakeLists.txt  RIOIOCPUDP.cpp  RIOIOCPUDP.sln  RIOIOCPUDP.vcxproj  RIOIOCPUDP.vcxproj.filters  args.cpp  args.hpp  auto_gen_ver_info.h.in
Shared/: Constants.h  Shared.h  Utilities.hpp
swxtch-perf-rio/: CMakeLists.txt  NetworkUtils.hpp  Range.hpp  RioConsumer.cpp  RioConsumer.hpp  RioProducer.cpp  RioProducer.hpp  RioSession.cpp  RioSession.hpp  StringUtils.cpp  StringUtils.hpp  Utilities.hpp  args.cpp  args.hpp  auto_gen_ver_info.h.in  stdafx.cpp  stdafx.h  swxtch-perf-rio.cpp  swxtch-win.hpp
